[project]
name = "ultimate-lora-loader-civitai"
description = "Fork of Ultimate Lora Loader with per-row Civitai Toolkit info: folder browser, drag-to-reorder, optional CLIP, and a ? button that opens Toolkit's Civitai model info modal."
version = "1.2.0"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/WaitWut/comfyui-ultimate-lora-loader"
"Bug Tracker" = "https://github.com/WaitWut/comfyui-ultimate-lora-loader/issues"

[tool.comfy]
PublisherId = "waitwut"
DisplayName = "Ultimate Lora Loader (Civitai)"
Icon = ""
